--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <p>Test OP </p>
+    <p>ElephH20 has a great product! </p>
 </body>
 </html>
