--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <nav class="navbar">
         <div class="navdiv">
-            <div class="logo"><a href="#">ElephH20</a></div>
+            <div class="logo"><img src="./images/Transparent elephh20 logo.png" alt="Girl in a jacket" width="auto" height="50px"><a href="#">ElephH20</a></div>
             <ul>
                 <li><a href="#">Home</a></li>
                 <li><a href="#">Product</a></li>
