--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
             <div class="logo"><img src="./images/Transparent elephh20 logo.png" alt="ElephH20 logo" width="auto" height="50px"><a href="#">ElephH20</a></div>
             <ul>
                 <li><a href="#">Home</a></li>
-                <li><a href="#">Product</a></li>
-                <li><a href="#">About</a></li>
-                <li><a href="#">Contact</a></li>
+                <li><a href="product.html">Product</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="contact.html">Contact</a></li>
             </ul>
         </div>
     </nav>
