--- a/index.html
+++ b/index.html
@@ -21,5 +21,11 @@
             </ul>
         </div>
     </nav>
+
+    <div class="content">
+        <h1>WaterWise</h1>
+        <p>It is time to be smart with your water!</p>
+        <button class="button-19" role="button">Learn more!</button>
+    </div>
 </body>
 </html>
