fixed login/register on navbar

--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
                 <li><a href="product.html">Product</a></li>
                 <li><a href="about.html">About</a></li>
                 <li><a href="contact.html">Contact</a></li>
+                <button class="button-19" role="button"><a href="#">Login</a></button>
+                <button class="button-19" role="button"><a href="#">Register</a></button>
             </ul>
         </div>
     </nav>
@@ -25,7 +27,7 @@
     <div class="content">
         <h1>WaterWise</h1>
         <p>It is time to be smart with your water!</p>
-        <button class="button-19" role="button">Learn more!</button>
+        <a class="button-19" role="button" href="product.html">Learn more!</a>
     </div>
 </body>
 </html>
