--- a/index.html
+++ b/index.html
@@ -25,8 +25,7 @@
     </nav>
 
     <div class="content">
-        <h1>WaterWise</h1>
-        <p>It is time to be smart with your water!</p>
+        <h1>WaterWise -- It is time to be smart with your water!</h1>
         <a class="button-19" role="button" href="product.html">Learn more!</a>
     </div>
 </body>
