--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <nav class="navbar">
         <div class="navdiv">
-            <div class="logo"><img src="./images/Transparent elephh20 logo.png" alt="ElephH20 logo" width="auto" height="50px"><a href="#">ElephH20</a></div>
+            <div class="logo"><a href="index.html"><img src="./images/Transparent elephh20 logo.png" alt="ElephH20 logo" width="auto" height="100px"></a></div>
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="product.html">Product</a></li>
