--- a/index.html
+++ b/index.html
@@ -3,20 +3,30 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>ElephH20</title>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <nav class="navbar">
         <div class="navdiv">
-            <div class="logo"><img src="./images/Transparent elephh20 logo.png" alt="ElephH20 logo" width="auto" height="50px"><a href="#">ElephH20</a></div>
+            <div class="logo"><a href="index.html"><img src="./images/Transparent elephh20 logo.png" alt="ElephH20 logo" width="auto" height="100px"></a></div>
             <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">Product</a></li>
-                <li><a href="#">About</a></li>
-                <li><a href="#">Contact</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="product.html">Product</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="contact.html">Contact</a></li>
+                <button class="button-19" role="button"><a href="#">Login</a></button>
+                <button class="button-19" role="button"><a href="#">Register</a></button>
             </ul>
         </div>
     </nav>
+
+    <div class="content">
+        <h1>WaterWise -- It is time to be smart with your water!</h1>
+        <a class="button-19" role="button" href="product.html">Learn more!</a>
+    </div>
 </body>
 </html>
