In order to make the product.html file more similar to the one on Figma i added the h1 containing water wise

--- a/product.html
+++ b/product.html
@@ -24,6 +24,9 @@
                 </ul>
             </div>
         </nav>
+        <div class="content" style="text-align: center; margin-top: 100px;">
+            <h1>Water Wise</h1>
+        </div>
         <div class="content"></div>
         <footer>
             <div class="footerContainer">
