Updated Landing page

--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap"
         rel="stylesheet">
-    <title>ElephH20</title>
     <link
         href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap"
         rel="stylesheet">
@@ -22,17 +21,26 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="product.html">Product</a></li>
                 <li><a href="about.html">About</a></li>
-                <li><a href="contact.html">Contact</a></li>
+                <li><a href="contact.html">Team</a></li>
                 <button class="button-19" role="button"><a href="#">Login</a></button>
                 <button class="button-19" role="button"><a href="#">Register</a></button>
             </ul>
         </div>
     </nav>
 
-    <div class="content">
-        <h1>WaterWise -- It is time to be smart with your water!</h1>
-        <a class="button-19" role="button" href="product.html">Learn more!</a>
+    <div class="hero">
+        <div class="info ">
+            <h1>Make Plant Care Fun!</h1>
+            <p>Bring your plants to life using WaterWise today</p>
+            <a class="button-19" role="button" href="product.html">Download</a>
+        </div>
+        
+        <div class="banner"> 
+            <img src="./images/readingside.png" alt="">
+        </div>
     </div>
+    
+   
 
     <div class="content">
         <h1>WaterWise -- It is time to be smart with your water!</h1>
