Added the upper part of the Product page

--- a/product.html
+++ b/product.html
@@ -24,10 +24,19 @@
                 </ul>
             </div>
         </nav>
-        <div class="content" style="text-align: center; margin-top: 100px;">
-            <h1>Water Wise</h1>
+        
+        <div class="hero">
+            <div class="banner">
+                <img src="./images/Picture_product_page.png" alt="Little happy plant on a white square and a green border" style="width:400px;height:auto;">
+            </div>
+            
+            <div class="info">
+                <h1>Waterwise</h1>
+                <p>Waterwise rendra l’entretient de vos plantes beaucoup plus plaisant! Avec l’aide de notre appareil, vos plantes ne manquerons plus jamais d’eau et grandiront sans arrêt. </p>
+                <h1>25,99$</h1>
+                <button class="button-19" role="button">ACHETER</button>
+            </div>
         </div>
-        <div class="content"></div>
         <footer>
             <div class="footerContainer">
                 <div class="icons">
@@ -46,32 +55,5 @@
                 </div>
             </div>
         </footer>
-    </body>
-</html>
-<!DOCTYPE html>
-<html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>ElephH20</title>
-        <link
-            href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap"
-            rel="stylesheet">
-        <link rel="stylesheet" href="style.css">
-    </head>
-    <body>
-        <nav class="navbar">
-            <div class="navdiv">
-                <div class="logo"><a href="index.html"><img src="./images/Transparent elephh20 logo.png" alt="ElephH20 logo" width="auto" height="100px"></a></div>
-                <ul>
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="product.html">Product</a></li>
-                    <li><a href="about.html">About</a></li>
-                    <li><a href="contact.html">Contact</a></li>
-                    <button class="button-19" role="button"><a href="#">Login</a></button>
-                    <button class="button-19" role="button"><a href="#">Register</a></button>
-                </ul>
-            </div>
-        </nav>
     </body>
 </html>
