started coding feature section

--- a/index.html
+++ b/index.html
@@ -40,12 +40,30 @@
         </div>
     </div>
     
-   
 
-    <div class="content">
-        <h1>WaterWise -- It is time to be smart with your water!</h1>
-        <a class="button-19" role="button" href="product.html">Learn more!</a>
-    </div>
+    <section class="content-1" id="feature">
+        <h1>WaterWise Features</h2>
+        <div class="features">
+            <div class="feature">
+                <img src="./images/Data analysis Case Study.png" alt="">
+                <h3>Hello</h3>
+            </div>
+            <div class="feature" >
+                <img src="./images/Concept of website recovery.png" alt="">
+                <h3>Hello</h3>
+            </div>
+            <div class="feature">
+                <img src="./images/Developer discussing different options.png" alt="">
+                <h3>Hello</h3>
+            </div>
+        </div>
+
+        <div></div>
+    </section>
+
+
+
+
     <footer>
         <div class="footerContainer">
             <div class="icons">
