Added features page

--- a/index.html
+++ b/index.html
@@ -46,15 +46,18 @@
         <div class="features">
             <div class="feature">
                 <img src="./images/Data analysis Case Study.png" alt="">
-                <h3>Hello</h3>
+                <h3>Monitor Beyond Water</h3>
+                <p>Waterwise operates best with our device to ensure proper planting conditions like hydration, lighting, humidity, and even more!</p>
             </div>
-            <div class="feature" >
+            <div class="feature feature-2" >
                 <img src="./images/Concept of website recovery.png" alt="">
-                <h3>Hello</h3>
+                <h3>Instant Plant Friend</h3>
+                <p>Waterwise can instantly bring any plant to life by simply taking a photo of it</p>
             </div>
-            <div class="feature">
-                <img src="./images/Developer discussing different options.png" alt="">
-                <h3>Hello</h3>
+            <div class="feature feature-3">
+                <img src="./images/Developer discussing different options (1).png" alt="">
+                <h3>Make Plant Care Social</h3>
+                <p>Waterwise is best with friends where you can send alerts or let your plants interact with each other</p>
             </div>
         </div>
 
