--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="product.html">Product</a></li>
                 <li><a href="about.html">About</a></li>
-                <li><a href="contact.html">Team</a></li>
+                <li><a href="team.html">Team</a></li>
                 <button class="button-19" role="button"><a href="#">Login</a></button>
                 <button class="button-19" role="button"><a href="#">Register</a></button>
             </ul>
