Added the skeleton of Team page

--- a/team.html
+++ b/team.html
@@ -24,6 +24,52 @@
                 </ul>
             </div>
         </nav>
+
+        <section class="content-1" id="feature">
+            <h1>We are you ElephH2O team</h1>
+            <br><br>
+            <div class="features">
+                <div class="team">
+                    <img src="./images/Profile_picture.png" alt="">
+                    <h3>Eric Chhour</h3>
+                    <p>Proin lacinia ac sem eget tempor. Ut dictum vehicula congue. Aenean mollis in ante et tincidunt. Cras rhoncus, massa eu venenatis venenatis, elit nisl semper ipsum, ac pretium ligula turpis volutpat augue. Duis at rutrum purus. Suspendisse potenti. Proin eget tincidunt ipsum.</p>
+                    <br>
+                </div>
+                <div class="team">
+                    <img src="./images/Profile_picture.png" alt="">
+                    <h3>Loqman Guergueb</h3>
+                    <p>Proin lacinia ac sem eget tempor. Ut dictum vehicula congue. Aenean mollis in ante et tincidunt. Cras rhoncus, massa eu venenatis venenatis, elit nisl semper ipsum, ac pretium ligula turpis volutpat augue. Duis at rutrum purus. Suspendisse potenti. Proin eget tincidunt ipsum.</p>
+                    <br>
+                </div>
+                <div class="team">
+                    <img src="./images/Profile_picture.png" alt="">
+                    <h3>Arvin Leung</h3>
+                    <p>Proin lacinia ac sem eget tempor. Ut dictum vehicula congue. Aenean mollis in ante et tincidunt. Cras rhoncus, massa eu venenatis venenatis, elit nisl semper ipsum, ac pretium ligula turpis volutpat augue. Duis at rutrum purus. Suspendisse potenti. Proin eget tincidunt ipsum.</p>
+                    <br>
+                </div>
+            </div>
+
+            <div class="features">
+                <div class="team2">
+                    <img src="./images/Profile_picture.png" alt="">
+                    <h3>Océane Prud'Homme</h3>
+                    <p>Proin lacinia ac sem eget tempor. Ut dictum vehicula congue. Aenean mollis in ante et tincidunt. Cras rhoncus, massa eu venenatis venenatis, elit nisl semper ipsum, ac pretium ligula turpis volutpat augue. Duis at rutrum purus. Suspendisse potenti. Proin eget tincidunt ipsum.</p>
+                    <br>
+                </div>
+
+                <div class="team2">
+                    <img src="./images/Profile_picture.png" alt="">
+                    <h3>Lili Rose Théoret</h3>
+                    <p>Proin lacinia ac sem eget tempor. Ut dictum vehicula congue. Aenean mollis in ante et tincidunt. Cras rhoncus, massa eu venenatis venenatis, elit nisl semper ipsum, ac pretium ligula turpis volutpat augue. Duis at rutrum purus. Suspendisse potenti. Proin eget tincidunt ipsum.</p>
+                    <br>
+                </div>
+
+            </div>
+    
+            <div></div>
+        </section>
+    
+
         <div class="content"></div>
         <footer>
             <div class="footerContainer">
