Ajusted the W in WaterWise on the Product page

--- a/product.html
+++ b/product.html
@@ -31,8 +31,8 @@
             </div>
             
             <div class="info">
-                <h1>Waterwise</h1>
-                <p>Waterwise rendra l’entretient de vos plantes beaucoup plus plaisant! Avec l’aide de notre appareil, vos plantes ne manquerons plus jamais d’eau et grandiront sans arrêt. </p>
+                <h1>WaterWise</h1>
+                <p>WaterWise rendra l’entretient de vos plantes beaucoup plus plaisant! Avec l’aide de notre appareil, vos plantes ne manquerons plus jamais d’eau et grandiront sans arrêt. </p>
                 <h1>25,99$</h1>
                 <button class="button-19" role="button">ACHETER</button>
             </div>
