Added our images and descriptions to the about page

--- a/contact.html
+++ b/contact.html
@@ -24,6 +24,21 @@
                 </ul>
             </div>
         </nav>
+    </nav>
+    <div class="person">
+        <img src="images/Arvin.png" alt="Arvin Leung" class="small-image">
+        <p>Front-end Web Developer, Born and raised in Ottawa, 
+            Plant’s name is George</p>
+        <img src="images/Eric.JPG" alt="Eric" class="small-image">
+        <p>Software engineering student at uOttawa. Aspiring to make a positive difference.</p>
+        <img src="images/Oceane.png" alt="Marvin" class="small-image">
+        <p>Software engineering student Bilingual Orchid lover.</p>
+        <img src="images/Loqman.jpeg" alt="Loqman" class="small-image">
+        <p>Trying to become a constantly evolving Full-Stack Developer.</p>
+        <img src="images/Lili Rose.png" alt="Marvin" class="small-image">
+        <p>Aspiring software engineer French speaker Owner of three cactus.</p>
+    </div>
+    
         <div class="content"></div>
         <footer>
             <div class="footerContainer">
