--- a/team.html
+++ b/team.html
@@ -30,37 +30,37 @@
             <br><br>
             <div class="features">
                 <div class="team">
-                    <img src="./images/Profile_picture.png" alt="">
+                    <img src="./images/Eric.JPG" alt="">
                     <h3>Eric Chhour</h3>
-                    <p>Proin lacinia ac sem eget tempor. Ut dictum vehicula congue. Aenean mollis in ante et tincidunt. Cras rhoncus, massa eu venenatis venenatis, elit nisl semper ipsum, ac pretium ligula turpis volutpat augue. Duis at rutrum purus. Suspendisse potenti. Proin eget tincidunt ipsum.</p>
+                    <p>Software engineering student at uOttawa <br> Aspiring to make a positive difference.</p>
                     <br>
                 </div>
                 <div class="team">
-                    <img src="./images/Profile_picture.png" alt="">
+                    <img src="./images/Loqman.jpeg" alt="">
                     <h3>Loqman Guergueb</h3>
-                    <p>Proin lacinia ac sem eget tempor. Ut dictum vehicula congue. Aenean mollis in ante et tincidunt. Cras rhoncus, massa eu venenatis venenatis, elit nisl semper ipsum, ac pretium ligula turpis volutpat augue. Duis at rutrum purus. Suspendisse potenti. Proin eget tincidunt ipsum.</p>
+                    <p>Trying to become a constantly evolving Full-Stack Developer</p>
                     <br>
                 </div>
                 <div class="team">
-                    <img src="./images/Profile_picture.png" alt="">
+                    <img src="./images/Arvin.png" alt="">
                     <h3>Arvin Leung</h3>
-                    <p>Proin lacinia ac sem eget tempor. Ut dictum vehicula congue. Aenean mollis in ante et tincidunt. Cras rhoncus, massa eu venenatis venenatis, elit nisl semper ipsum, ac pretium ligula turpis volutpat augue. Duis at rutrum purus. Suspendisse potenti. Proin eget tincidunt ipsum.</p>
+                    <p>Front-end Web Developer <br> Born and raised in Ottawa <br> Plant’s name is George</p>
                     <br>
                 </div>
             </div>
 
             <div class="features">
                 <div class="team2">
-                    <img src="./images/Profile_picture.png" alt="">
+                    <img src="./images/Oceane.png" alt="">
                     <h3>Océane Prud'Homme</h3>
-                    <p>Proin lacinia ac sem eget tempor. Ut dictum vehicula congue. Aenean mollis in ante et tincidunt. Cras rhoncus, massa eu venenatis venenatis, elit nisl semper ipsum, ac pretium ligula turpis volutpat augue. Duis at rutrum purus. Suspendisse potenti. Proin eget tincidunt ipsum.</p>
+                    <p>Software engineering student <br> Bilingual <br> Orchid lover</p>
                     <br>
                 </div>
 
                 <div class="team2">
-                    <img src="./images/Profile_picture.png" alt="">
+                    <img src="./images/Lili Rose.png" alt="">
                     <h3>Lili Rose Théoret</h3>
-                    <p>Proin lacinia ac sem eget tempor. Ut dictum vehicula congue. Aenean mollis in ante et tincidunt. Cras rhoncus, massa eu venenatis venenatis, elit nisl semper ipsum, ac pretium ligula turpis volutpat augue. Duis at rutrum purus. Suspendisse potenti. Proin eget tincidunt ipsum.</p>
+                    <p>Aspiring software engineer <br> Bilingual <br> Owner of three cactus</p>
                     <br>
                 </div>
 
