--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
                 <li><a href="team.html">Team</a></li>
                 <button class="button-19" role="button"><a href="#">Login</a></button>
                 <button class="button-19" role="button"><a href="#">Register</a></button>
+                <img src="images/sun.png" id="theme">
             </ul>
         </div>
     </nav>
@@ -85,5 +86,7 @@
             </div>
         </div>
     </footer>
+
+    <script src="main.js"></script>
 </body>
 </html>
