--- a/team.html
+++ b/team.html
@@ -21,6 +21,7 @@
                     <li><a href="team.html">Team</a></li>
                     <button class="button-19" role="button"><a href="#">Login</a></button>
                     <button class="button-19" role="button"><a href="#">Register</a></button>
+                    <img src="images/sun.png" id="theme">
                 </ul>
             </div>
         </nav>
@@ -89,5 +90,7 @@
                 </div>
             </div>
         </footer>
+
+        <script src="main.js"></script>
     </body>
 </html>
