Added the testimonials tite and corrected an upper line in the code

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     
 
     <section class="content-1" id="feature">
-        <h1>WaterWise Features</h2>
+        <h1>WaterWise Features</h1>
         <div class="features">
             <div class="feature">
                 <img src="./images/Data analysis Case Study.png" alt="">
@@ -65,6 +65,9 @@
         <div></div>
     </section>
 
+    <section class="content-T" id="feature">
+        <h1>Testimonials</h1>
+        
 
 
 
