Added Testimonial section

--- a/team.html
+++ b/team.html
@@ -29,7 +29,7 @@
         <section class="content-1" id="feature">
             <h1>We are you ElephH2O team</h1>
             <br><br>
-            <div class="features">
+            <div class="profile">
                 <div class="team">
                     <img src="./images/Eric.JPG" alt="">
                     <h3>Eric Chhour</h3>
@@ -50,7 +50,7 @@
                 </div>
             </div>
 
-            <div class="features">
+            <div class="profile">
                 <div class="team2">
                     <img src="./images/Oceane.png" alt="">
                     <h3>Océane Prud'Homme</h3>
@@ -71,7 +71,7 @@
         </section>
     
 
-        <div class="content"></div>
+      
         <footer>
             <div class="footerContainer">
                 <div class="icons">
