Added about page, Added mobile mockup to Landing page, and fixed team page

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         </div>
         
         <div class="banner"> 
-            <img src="./images/readingside.png" alt="">
+            <img src="./images/WaterWise_Application_Mockup_Banner__1.png" alt="">
         </div>
     </div>
     
