Added Scroll Effect to landing page

--- a/index.html
+++ b/index.html
@@ -43,20 +43,20 @@
     
 
 
-    <section class="content" id="feature">
+    <section class="content hidden" id="feature">
         <h1>WaterWise Features</h1>
         <div class="features">
-            <div class="feature">
+            <div class="feature hidden">
                 <img src="./images/Data analysis Case Study.png" alt="">
                 <h3>Monitor Beyond Water</h3>
                 <p>Waterwise operates best with our device to ensure proper planting conditions like hydration, lighting, humidity, and even more!</p>
             </div>
-            <div class="feature feature-2" >
+            <div class="feature hidden" >
                 <img src="./images/Concept of website recovery.png" alt="">
                 <h3>Instant Plant Friend</h3>
                 <p>Waterwise can instantly bring any plant to life by simply taking a photo of it</p>
             </div>
-            <div class="feature feature-3">
+            <div class="feature hidden">
                 <img src="./images/Developer discussing different options (1).png" alt="">
                 <h3>Make Plant Care Social</h3>
                 <p>Waterwise is best with friends where you can send alerts or let your plants interact with each other</p>
@@ -68,10 +68,10 @@
     </section>
 
 
-    <section class="content">
+    <section class="content hidden">
         <h1>Testimonials</h1>
         <div class="testimonial">
-            <div class="Rating rat-1">
+            <div class="Rating hidden">
                 <h3>Super Fun and Engaging</h3>
                 <ul>
                     <li><img class="star" src="./images/Star 25.png" alt=""></li>
@@ -82,7 +82,7 @@
                 </ul>
                 <p>I love all of the features on the app and it’s all so engaging!</p>
             </div>
-            <div class="Rating rat-2">
+            <div class="Rating hidden">
                 <h3>Never Stopped Playing!</h3>
                 <ul>
                     <li><img class="star" src="./images/Star 25.png" alt=""></li>
@@ -93,7 +93,7 @@
                 </ul>
                 <p>I love my new plant friend. Maybe even more than my own cat...</p>
             </div>
-            <div class="Rating rat-3">
+            <div class="Rating hidden">
                 <h3>Honestly really helpful</h3>
                 <ul>
                     <li><img class="star" src="./images/Star 25.png" alt=""></li>
