Minor text change

--- a/product.html
+++ b/product.html
@@ -41,7 +41,7 @@
         </div>
         
         <div class ="addon">
-            <p>Additional option +</p>
+            <p>- Additional option -</p>
 
         </div>
 
