Ajusted the moon/sun of the dark mode, added Notre mission and Notre histoire to the About page

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <li><a href="team.html">Team</a></li>
                 <button class="button-19" role="button"><a href="#">Login</a></button>
                 <button class="button-19" role="button"><a href="#">Register</a></button>
-                <img src="images/sun.png" id="theme">
+                <img src="images/moon.png" id="theme">
             </ul>
         </div>
     </nav>
