Ajusted the price

--- a/product.html
+++ b/product.html
@@ -33,7 +33,7 @@
                 </div>
                 <div class="detail">
                     <h1>WaterWise</h1>
-                    <h2>$24.99</h2>
+                    <h2>FREE</h2>
                     <p>WaterWise rendra l’entretient de vos plantes beaucoup plus plaisant! Avec l’aide de notre appareil, vos plantes ne manquerons plus jamais d’eau et grandiront sans arrêt. </p>
                     <button>Purchase</button>
                 </div>
