Updated Eric's pic

--- a/team.html
+++ b/team.html
@@ -31,7 +31,7 @@
             <br><br>
             <div class="profile">
                 <div class="team">
-                    <img src="./images/Eric.JPG" alt="">
+                    <img src="./images/Eric.jpg" alt="">
                     <h3>Eric Chhour</h3>
                     <p>Software engineering student at uOttawa <br> Aspiring to make a positive difference.</p>
                     <br>
