--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                     <li><img class="star" src="./images/Star 25.png" alt=""></li>
                     <li><img class="star" src="./images/Star 25.png" alt=""></li>
                 </ul>
-                <p>I love all of the features on the app and it’s all so engaging!</p>
+                <p>Love all of the features on the app and it’s all so engaging!</p>
             </div>
             <div class="Rating hidden">
                 <h3>Never Stopped Playing!</h3>
