Updated button on product page and eric's pic

--- a/product.html
+++ b/product.html
@@ -35,7 +35,7 @@
                     <h1>WaterWise</h1>
                     <h2>FREE</h2>
                     <p>WaterWise rendra l’entretient de vos plantes beaucoup plus plaisant! Avec l’aide de notre appareil, vos plantes ne manquerons plus jamais d’eau et grandiront sans arrêt. </p>
-                    <button>Purchase</button>
+                    <button>Download Now!</button>
                 </div>
             </div>
         </div>
