--- a/team.html
+++ b/team.html
@@ -25,7 +25,7 @@
                 </ul>
             </div>
         </nav>
-        
+
         <div class="wrapper">
             <span class="icon-close">
                 <ion-icon name="close-outline"></ion-icon>
@@ -63,7 +63,7 @@
 
 
         <section class="content-1" id="feature">
-            <h1>We are you ElephH2O team</h1>
+            <h1>We are your ElephH2O team</h1>
             <br><br>
             <div class="profile">
                 <div class="team">
